# dapidl

./: .gitignore  CLAUDE.md  README.md  analyze_cytoplasm_dapi.py  analyze_cytoplasm_dapi_merscope.py  benchmark_celltypist_models.py  create_cellpose_nucleus_centered_lmdb.py  create_clearml_base_tasks.py  create_configurable_pipeline.py  create_draft_pipeline.py  dapidl_pipeline_template.py  ensemble_celltypist_annotator.py  extract_celltypist_confidence.py  pyproject.toml  register_all_raw_datasets_clearml.py  register_derived_hq_datasets.py  register_pipeline_template.py  run_customizable_pipeline.py  run_hierarchical_stromal.py  run_patch_size_experiments.sh  run_universal_all_tissues_clearml.py  run_universal_clearml_pipeline.py  run_universal_training_clearml.py  segment_merscope_nuclei.py  visualize_merscope_patches.py
.claude/: hookify.clearml-commit-reminder.local.md  hookify.no-clearml-data-upload.local.md  settings.json
.claude/hooks/: enforce-clearml-cloud.sh
configs/: CLAUDE.md  clearml_id_mapping.json  config.yaml  dataset_defaults.yaml  default_methods.json  recipes.yaml  studio.json
configs/data/: default.yaml
configs/model/: efficientnet.yaml
configs/training/: default.yaml
dashboard/: .dockerignore  Dockerfile  app.py  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/components/: CLAUDE.md  auth.py  clearml_client.py  constants.py  ui_helpers.py
dashboard/pages/: 1_Pipeline_Launcher.py  2_Pipeline_Monitor.py  3_Datasets.py  4_Workers.py  5_Admin.py  CLAUDE.md
docker/: CLAUDE.md  Dockerfile.clearml-agent  Dockerfile.streamlit
docs/: 2026-06-08-melanoma-dapi-thesis-three-corrections.md  2026-06-08-project-review-and-melanoma-thesis-plan.md  CROSS_MODAL_VALIDATION.md  FINEGRAINED_BENCHMARK_REPORT.md  README.md  SINGLER_ALGORITHM.md  manuscript_draft.md  qc-review-tooling-test.md
docs/plans/: 2026-01-28-unified-pipeline.md
docs/reference/: SOTA_PIPELINE.md  spatial_transcriptomics_platforms_reference.md
docs/reports/: CODE_REVIEW_JAN2025.md  granularity_audit_2026_05.md
docs/thesis/: 2026-06-08-melanom-dapi-dissertation-drei-korrekturen.md  2026-06-08-project-review-and-melanoma-thesis-plan.md
patch_cascades/: metadata.json
pipeline_output/celldino_sthelar_breast/: results.json
pipeline_output/context_radius_ablation/: summary.json
pipeline_output/crosseval_rep12/: results.json
pipeline_output/dinov2_sthelar_breast/: results.json
pipeline_output/granularity_audit/: per_slide_counts.parquet
pipeline_output/lora_dinov2_sthelar/: results.json
pipeline_output/lora_nuspire_sthelar/: results.json
pipeline_output/lora_openphenom_sthelar/: results.json
pipeline_output/masked_d25_all4/: summary.json
pipeline_output/nuspire_scheduled_2026_05_31/: run_nuspire_scheduled.sh
pipeline_output/nuspire_sthelar_breast/: results.json
pipeline_output/nuspire_v2_sthelar_breast/: results.json
pipeline_output/openphenom_sthelar_breast/: results.json
pipeline_output/phikon_sthelar_breast/: results.json
pipeline_output/segmentation_benchmark_final/: all_metrics.json  report.md
pipeline_output/sthelar_breast_all4/: metrics_rep1.json  metrics_rep2.json  metrics_test.json  training_history.json
pipeline_output/subnuclear_2026_06/: README.md
pipeline_output/xenium_segmentation_benchmark/: results.json
presentation/: DAPIDL_Presentation.pptx  DAPIDL_Presentation_2026.pptx  DAPIDL_a_pair_2026_05_04.pptx  DAPIDL_v2.pptx  SLIDE_REWRITE_V2.md  build_presentation.js  export_svgs.js  generate_arch_figures.js  generate_assets.js  package-lock.json  package.json
presentation/slides/: s01.html  s02.html  s03.html  s04.html  s05.html  s06.html  s07.html  s08.html  s09.html  s10.html  s11.html  s12.html  s12b.html  s12c.html  s13.html  s14.html  s15.html  s16.html  s17.html  s18.html  s19.html  s20.html  s21.html  s22.html  s23.html  s24.html  s25.html  s26.html
scripts/: CLAUDE.md  _cascade_render.py  aggregate_annotation_results.py  aggregate_trained_models.py  analyze_cell_level_agreement.py  analyze_dataset_impact.py  analyze_hpo_results.py  analyze_method_complementarity.py  analyze_method_complementarity_v2.py  annotate_mouse_brain.py  annotation_benchmark_2026_03.py  annotation_benchmark_celltypist_mega.py  annotation_benchmark_round2.py  annotation_run_2026_05.py  annotation_skin_2026_05.py  annotation_topk_consensus.py  attach_medium_labels.py  aws_autoscaler.py  banksy_breast_orchestrator.sh  banksy_breast_worker.py  banksy_cloud_markers.py  banksy_cloud_run.py  banksy_cloud_worker.py  banksy_full_benchmark.py  banksy_integrate_results.py  benchmark_all_datasets.py  benchmark_all_with_cl.py  benchmark_annotation_methods.py  benchmark_banksy_consensus.py  benchmark_banksy_spatial.py  benchmark_cl_ablation.py  benchmark_cl_normalized.py  benchmark_cl_standardized.py  benchmark_comprehensive.py  benchmark_finegrained_all_combinations.py  benchmark_llm_cluster_annotation.py  benchmark_multi_granularity.py  benchmark_multigran_2026_03.py  benchmark_nogt_tissues.py  benchmark_popv_max.py  (+156 more)
scripts/figures/: annotation_eval_figs.py  breast_cross_source_figs.py  breast_size_figs.py  (+1 more)
tests/: test_ab_stats.py  test_attribution.py  test_backbone_norm.py  test_benchmark_consensus.py  test_benchmark_evaluation.py  test_benchmark_fov_selector.py  test_cell_boundary.py  test_collage_render.py  test_declarative_annotation.py  test_gce_loss.py  test_graph_banksy.py  test_graph_edge_geometry.py  test_graph_embed.py  test_graph_encoders.py  test_graph_geometry.py  test_graph_gnn.py  test_graph_harness.py  test_graph_knn.py  test_graph_probe_eval.py  test_graph_registry.py  test_graph_smooth.py  test_graph_splits.py  test_hierarchical.py  test_instance_metrics.py  test_label_cleaning.py  test_lazy_mosaic.py  test_lr_schedule.py  test_no_direct_stardist_import.py  test_nuclass.py  test_nuspire_backbone.py  test_nuspire_wiring.py  test_ontology.py  test_ontology_derive.py  test_patch_features.py  test_qc_cli.py  test_qc_io.py  test_qc_montage.py  test_qc_segmentation_grounded.py  test_qc_step.py  test_quality_control_seg.py  (+14 more)
(+287 files in other folders)
