[project]
name = "dapidl"
version = "0.1.0"
description = "Deep learning system to predict cell types from DAPI nuclear staining"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris M" }]
keywords = ["deep-learning", "cell-type", "DAPI", "spatial-transcriptomics", "xenium"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0",
    "timm>=0.9",
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "albumentations>=1.4",
    "zarr>=2.16",
    "tifffile>=2024.1.0",
    "imagecodecs>=2024.1.0",
    "polars>=0.20",
    "pyarrow>=14.0",
    "click>=8.1",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "tqdm>=4.66",
    "celltypist>=1.6",
    "scanpy>=1.10",
    "anndata>=0.10",
    "numpy>=1.26",
    "h5py>=3.10",
    "rich>=13.7",
    "loguru>=0.7",
    # popv moved to optional [popv] extra - has heavy deps that slow pip resolution
    "sentence-transformers>=4.0",
    "tokenizers>=0.15",
    "openpyxl>=3.1.5",
    "nvidia-dali-cuda120>=1.52.0",
    "lmdb>=1.7.5",
    "scikit-image>=0.25.2",
    "cellpose>=4.0.8",
    # ClearML experiment tracking and remote execution
    "clearml[s3]>=1.16",
    "mygene>=3.2.2",
    "rpy2>=3.6.4",
    "optuna>=4.6.0",
    "obonet>=1.1.1",
    "networkx>=3.6",
    "rapidfuzz>=3.14.3",
    "popv>=0.6.0",
]

[project.optional-dependencies]
# PopV annotator - heavy dependency tree that causes slow pip resolution
popv = [
    "popv>=0.6.0",
]
# HEIST graph neural network dependencies (require special build handling)
# These packages need torch installed first, use: pip install torch && pip install .[heist]
heist = [
    "torch-geometric>=2.4",
    "torch-scatter>=2.1",
    "torch-sparse>=0.6",
    "pymetis",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "mypy>=1.8",
    "ipython>=8.20",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
dali = [
    "nvidia-dali-cuda120>=1.35",
    "lmdb>=1.4",
]

[project.scripts]
dapidl = "dapidl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dapidl"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TID"]
ignore = ["E501"]

# Prefer polars over pandas - see CLAUDE.md "DataFrame Library Standard"
# TID251 checks for banned module imports
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"pandas".msg = "Prefer polars for DataFrame operations. Use pandas only at external library boundaries (scanpy, anndata, celltypist). See CLAUDE.md 'DataFrame Library Standard'."

# Files that legitimately need pandas for external library boundaries
[tool.ruff.lint.per-file-ignores]
# These files interface with external libs (scanpy, anndata, celltypist, R) that require pandas
"src/dapidl/cli.py" = ["TID251"]  # pd.read_excel, anndata creation
"src/dapidl/data/annotation.py" = ["TID251"]
"src/dapidl/pipeline/steps/annotation.py" = ["TID251"]
"src/dapidl/pipeline/steps/cross_validation.py" = ["TID251"]
"src/dapidl/pipeline/steps/ensemble_annotation.py" = ["TID251"]
"src/dapidl/pipeline/steps/popv_annotation.py" = ["TID251"]
"src/dapidl/pipeline/components/annotators/ground_truth.py" = ["TID251"]
"src/dapidl/pipeline/components/annotators/azimuth.py" = ["TID251"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

# Fix PyTorch Geometric build dependencies (torch-scatter/sparse need torch at build time)
[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
torch-sparse = ["torch"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
